--- a/src/main/html/ball.html
+++ b/src/main/html/ball.html
@@ -27,7 +27,7 @@
 		let background = {
 			move: () => [background],
 			draw: context => {
-				context.fillStyle = "#777777";
+				context.fillStyle = "#556677";
 				context.fillRect(0, 0, width, height);
 
 				context.fillStyle = "#000000";
@@ -59,7 +59,7 @@
 
 					/* context.beginPath(); context.arc(ballx, bally, radius, 0, 2 * Math.PI); context.stroke(); */
 
-					context.fillStyle = "#0000FF";
+					context.fillStyle = "#AABBCC";
 					context.beginPath();
 					context.moveTo(ballx, bally - radius);
 					context.lineTo(ballx + radius * 0.866, bally - radius * 0.5);
