--- a/src/main/html/block-fill.html
+++ b/src/main/html/block-fill.html
@@ -13,6 +13,9 @@ file:///home/ywsing/suite/src/main/html/render.html
 	<script src='render.js'></script>
 
 	<script type='text/javascript'>
+'use strict';
+let { lens, range, read, } = fun();
+let { rd, renderAgain, } = render();
 let close;
 
 let handle = ev => {
