--- a/src/main/html/radar.html
+++ b/src/main/html/radar.html
@@ -13,6 +13,7 @@
 
 	<script type="text/javascript">
 		"use strict";
+		let { lens, range, read, } = fun();
 
 		let width = window.innerWidth;
 		let height = window.innerHeight;
