--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -13,12 +13,54 @@ file:///home/ywsing/suite/src/main/html/render.html
 	<script src='render.js'></script>
 
 	<script type='text/javascript'>
+let login = () => {
+	console.log('logging in');
+	let username = document.getElementById('username').value;
+	let password = document.getElementById('password').value;
+
+	let formData = new FormData();
+	formData.append('username', username);
+	formData.append('password', password);
+	// formData.append('photo', document.querySelector('input[type="file"][multiple]').files[0]);
+
+	fetch('/getToken', {
+		// body: formData,
+		body: JSON.stringify({ username, password, }),
+		cache: 'no-cache',
+		credentials: 'omit',
+		headers: { 'Content-Type': 'application/json' },
+		// headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+		method: 'POST',
+		mode: 'no-cors',
+		redirect: 'follow',
+		referrer:'no-referrer',
+	}).then(response => {
+		if (response.ok)
+			console.log(response.json().token);
+		else {
+			console.error("response", response);
+			alert("authenticate failed");
+		}
+	}, error => {
+		console.error("login", error);
+		alert("authenticate failed");
+	});
+};
+
 let { lens, range, read, } = fun();
 let { rd, renderAgain, } = render();
 let close;
 
 let view0 = rd.parse(`
 	<span style='font-family: sans-serif;'>
+		<font face='Monospac821 BT, Monaco, Consolas'>
+			<form name='login'>
+				Username <input id='username' type='text' autofocus='' /><br />
+				Password <input id='password' type='password' /><br />
+				<input type='button' value='Login' rd_on_click='login()' />
+			</form>
+		</font>
+
 		<rd_map v='vm.message'>
 			<p style='font-weight: bold;'>
 				{ vm } within scope
