--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -28,20 +28,16 @@ let login = () => {
 		body: JSON.stringify({ username, password, }),
 		cache: 'no-cache',
 		credentials: 'omit',
-		headers: { 'Content-Type': 'application/json' },
+		headers: { 'Content-Type': 'application/json', },
 		// headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
 		method: 'POST',
 		mode: 'no-cors',
 		redirect: 'follow',
-		referrer:'no-referrer',
-	}).then(response => {
-		if (response.ok)
-			console.log(response.json().token);
-		else {
-			console.error("response", response);
-			alert("authenticate failed");
-		}
-	}, error => {
+		referrer: 'no-referrer',
+	})
+	.then(response => response.json())
+	.then(json => console.log('token', json.token))
+	.catch(error => {
 		console.error("login", error);
 		alert("authenticate failed");
 	});
