--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -80,26 +80,26 @@ let view = rd
 	)
 	.rd();
 
+let fetchBase = { cache: 'no-cache', credentials: 'omit', redirect: 'follow', referrer: 'no-referrer', };
+
 let login = () => {
 	console.log('login()');
 	let username = document.getElementById('username').value;
 	let password = document.getElementById('password').value;
 
 	fetch('/token', {
+		...fetchBase,
+		mode: 'no-cors',
 		body: JSON.stringify({ username, password, }),
-		cache: 'no-cache',
-		credentials: 'omit',
 		headers: { 'Content-Type': 'application/json', },
 		method: 'POST',
-		mode: 'no-cors',
-		redirect: 'follow',
-		referrer: 'no-referrer',
 	})
 	.then(response => {
 		if (response.ok) return response.json(); else throw response.statusText;
 	})
 	.then(json => json.token)
 	.then(token => fetch('/token', {
+		...fetchBase,
 		headers: { 'Authorization': token, },
 		method: 'PATCH',
 	}))
@@ -109,6 +109,7 @@ let login = () => {
 	.then(json => json.token)
 	.then(token => { renderAgain(view, vm => ({ ...vm, token, })); return token; })
 	.then(token => fetch('/api', {
+		...fetchBase,
 		headers: { 'Authorization': token, },
 		method: 'GET',
 	}))
