--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -21,9 +21,9 @@ let view0 = rd.parse(`
 	<span style='font-family: sans-serif;'>
 		<font face='Monospac821 BT, Monaco, Consolas'>
 			<form name='login'>
-				Username <input id='username' type='text' autofocus='autofocus' /><br />
-				Password <input id='password' type='password' /><br />
-				<input type='button' value='Login' rd_on_click='login()' /><br />
+				Username <input id='username' rd_on_input='vm.username = ev.target.value' type='text' autofocus='autofocus' /><br />
+				Password <input id='password' rd_on_input='vm.password = ev.target.value' type='password' /><br />
+				<input type='button' value='Login' rd_on_click='login(vm)' /><br />
 				token: { vm.token }
 			</form>
 		</font>
@@ -82,10 +82,9 @@ let view = rd
 
 let fetchBase = { cache: 'no-cache', credentials: 'omit', redirect: 'follow', referrer: 'no-referrer', };
 
-let login = () => {
+let login = vm => {
 	console.log('login()');
-	let username = document.getElementById('username').value;
-	let password = document.getElementById('password').value;
+	let { username, password, } = vm;
 
 	fetch('/token', {
 		...fetchBase,
