--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -21,8 +21,8 @@ let view0 = rd.parse(`
 	<span style='font-family: sans-serif;'>
 		<font face='Monospac821 BT, Monaco, Consolas'>
 			<form name='login'>
-				Username <input id='username' rd_on_input='vm.username = ev.target.value' type='text' autofocus='autofocus' /><br />
-				Password <input id='password' rd_on_input='vm.password = ev.target.value' type='password' /><br />
+				Username <input id='username' rd_on_input='vm.username = ev.target.value' value='{ vm.username }' type='text' autofocus='autofocus' /><br />
+				Password <input id='password' rd_on_input='vm.password = ev.target.value' value='{ vm.password }' type='password' /><br />
 				<input type='button' value='Login' rd_on_click='login(vm)' /><br />
 				token: { vm.token }
 			</form>
@@ -135,10 +135,11 @@ let upd1 = lens.key('vscroll').key('vms').index(3).apply(vm => Math.random().toS
 let interval0 = setInterval(() => renderAgain(view, upd0), 1000);
 let interval1 = setInterval(() => renderAgain(view, upd1), 3000);
 
-renderAgain(view, vm => ({ sse, t, vscroll, message: 'hello world0', fruits: ['banana',], }));
-renderAgain(view, vm => ({ sse, t, vscroll, message: 'hello world1', fruits: ['apple', 'banana',], }));
-renderAgain(view, vm => ({ sse, t, vscroll, message: 'hello world2', fruits: ['apple', 'orange', 'orange', 'banana',], }));
-renderAgain(view, vm => ({ sse, t, vscroll, message: 'hello world~', fruits: ['banana', 'orange',], }));
+renderAgain(view, vm => ({ ...vm, username: '', password: '' }));
+renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world0', fruits: ['banana',], }));
+renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world1', fruits: ['apple', 'banana',], }));
+renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world2', fruits: ['apple', 'orange', 'orange', 'banana',], }));
+renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world~', fruits: ['banana', 'orange',], }));
 
 close = () => {
 	clearInterval(interval0);
